# ChangeLog for x11-apps/mesa-progs
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.29 2006/12/01 18:17:29 gustavoz Exp $

  01 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  mesa-progs-6.5.1.ebuild:
  Stable on hppa

  27 Oct 2006; Joseph Jezak <josejx@gentoo.org> mesa-progs-6.5.1.ebuild:
  Marked ppc stable.

  17 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  mesa-progs-6.5.1.ebuild:
  Stable on sparc

  16 Oct 2006; Markus Rothe <corsair@gentoo.org> mesa-progs-6.5.1.ebuild:
  Stable on ppc64

  13 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  mesa-progs-6.5.1.ebuild:
  AMD64/x86 stable for bug #144549 (X7.1).

*mesa-progs-6.5.1 (17 Sep 2006)

  17 Sep 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +mesa-progs-6.5.1.ebuild:
  Bump.

  12 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> mesa-progs-6.5.ebuild:
  Stable on hppa

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> mesa-progs-6.4.2.ebuild:
  Stable on hppa.

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org> mesa-progs-6.5.ebuild:
  Mark 6.5 stable on ia64

  06 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> mesa-progs-6.5.ebuild:
  Add ~x86-fbsd keyword.

  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
  mesa-progs-6.5.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> mesa-progs-6.5.ebuild:
  Stable on ppc64

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  mesa-progs-6.4.2.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> mesa-progs-6.4.2.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  mesa-progs-6.4.2.ebuild:
  x86 stable.

  13 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  mesa-progs-6.4.2.ebuild:
  Add ~x86-fbsd keyword.

  11 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  mesa-progs-6.4.2.ebuild, mesa-progs-6.5.ebuild: