@@ -1,0 +1,6 @@
+MD5 e870efe98d3a50be01ab211b9b2e25d9 MesaDemos-6.5.2.tar.bz2 1324545
+RMD160 3dbc5e32edba1ee0d9a921aca24ca8d2db1b56f1 MesaDemos-6.5.2.tar.bz2 1324545
+SHA256 804f74959bf5f0bb58e159f1a62c7ed8290ab4d92fdce9ed986d0eaf81e70eea MesaDemos-6.5.2.tar.bz2 1324545
+MD5 e4d894181f1859651658b3704633e10d MesaLib-6.5.2.tar.bz2 3295166
+RMD160 9a92d69110c066ae6734bcaafb78f222ac2df6d3 MesaLib-6.5.2.tar.bz2 3295166
+SHA256 137f50a30461d51eb9af5aac737bc788d536354cf47b26129b97bde6e41fb85f MesaLib-6.5.2.tar.bz2 3295166
