@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/mesa-progs
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.29 2006/12/01 18:17:29 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.30 2006/12/05 03:19:45 joshuabaergen Exp $
+
+*mesa-progs-6.5.2 (05 Dec 2006)
+
+  05 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
+  +mesa-progs-6.5.2.ebuild:
+  Version bump.
 
   01 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   mesa-progs-6.5.1.ebuild:
